--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "test:watch": "npm run test -- --watch"
     },
     "author": "",
-    "license": "MIT",
+    "license": "",
     "dependencies": {
         "babel-polyfill": "6.8.0",
         "bootstrap": "3.3.6",
