--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "React and Redux Pluralsight course by Cory House",
     "scripts": {
         "prestart": "babel-node tools/startMessage.js",
-        "start": "babel-node tools/srcServer.js"
+        "start": "babel-node tools/srcServer.js",
+        "lint": "esw webpack.config.* src tools",
+        "lint:watch": "npm run lint -- --watch"
     },
     "author": "",
     "license": "",
