--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "React and Redux Pluralsight course by Cory House",
     "scripts": {
         "prestart": "babel-node tools/startMessage.js",
-        "start": "babel-node tools/srcServer.js",
+        "start": "npm-run-all --parallel open:src lint:watch",
+        "open:src": "babel-node tools/srcServer.js",
         "lint": "esw webpack.config.* src tools",
         "lint:watch": "npm run lint -- --watch"
     },
