--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "start": "npm-run-all --parallel open:src lint:watch",
         "open:src": "babel-node tools/srcServer.js",
         "lint": "esw webpack.config.* src tools",
-        "lint:watch": "npm run lint -- --watch"
+        "lint:watch": "npm run lint -- --watch",
+        "test": "mocha --compilers js:babel-core/register src/**/*.test.js",
+        "test:watch": "npm run test -- --watch"
     },
     "author": "",
     "license": "",
